WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
14642
REGRESSION(
r24064
-24096): Reflection type effect in canvas tag broke
https://bugs.webkit.org/show_bug.cgi?id=14642
Summary
REGRESSION(r24064-24096): Reflection type effect in canvas tag broke
Dean Krueger
Reported
2007-07-17 08:02:13 PDT
The fade off on the reflection is not working, if I use the normal Safari this page looks fine, I use the nightly build and the fade of the reflection is gone.
Attachments
Reduction
(644 bytes, text/html)
2007-07-17 19:35 PDT
,
Matt Lilek
no flags
Details
First attempt
(18.74 KB, patch)
2007-07-20 00:06 PDT
,
Rob Buis
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2007-07-17 08:50:59 PDT
Confirmed with a local debug build of WebKit
r24303
with Safari 3.0 (522.12) on Mac OS X 10.4.10 (8R218).
David Kilzer (:ddkilzer)
Comment 2
2007-07-17 08:51:22 PDT
<
rdar://problem/5340241
>
Matt Lilek
Comment 3
2007-07-17 19:35:52 PDT
Created
attachment 15558
[details]
Reduction
Matt Lilek
Comment 4
2007-07-17 19:40:36 PDT
Regressed between
r24064
and
r24096
with these two looking like the obvious commits:
http://trac.webkit.org/projects/webkit/changeset/24090
http://trac.webkit.org/projects/webkit/changeset/24091
Rob Buis
Comment 5
2007-07-20 00:06:46 PDT
Created
attachment 15590
[details]
First attempt I think the regression was caused by my attempt to fix the CGContextGetPathBoundingBox warnings. This fixes it in a different way, while still passing all tests. Cheers, Rob.
Darin Adler
Comment 6
2007-07-20 08:51:39 PDT
Comment on
attachment 15590
[details]
First attempt r=me -- my bad!
Rob Buis
Comment 7
2007-07-20 11:21:43 PDT
Landed in
r24480
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug