        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=14642
        REGRESSION(r24064-24096): Reflection type effect in canvas tag broke

        Do not stop the fill/stroke operation when encountering an empty path.



Canonical link: https://commits.webkit.org/19126@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@24480 268f45cc-cd09-0410-ab3c-d52691b4dbfc